[package]
name = "rust_webassembly_todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { path = "../../packages/yew", features = ["csr"] }
strum = "0.24"
strum_macros = "0.24"
serde = "1"
serde_derive = "1"
gloo = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlInputElement",
]
